--- a/p/skrbt.html
+++ b/p/skrbt.html
@@ -210,8 +210,9 @@
         </div>
 
            <div class="links">
-<a href="https://www.imi123.cn/z-library.html" target="_blank" rel="nofollow">zlibrary镜像网址</a>
-<a href="https://www.yecao123.cn/" target="_blank" >野草导航·磁力下载</a>
+<a href="https://zlibraryrub.github.io/" target="_blank" >zlibrary</a>
+<a href="https://www.yecao123.cn/sites/224.html" target="_blank" >国内最大电子书站</a>
+<a href="https://www.tdboxs.cn/favorites/yingyinzaixian" target="_blank" >影视在线下载</a>
         </div> 
 
 
